objects/sfal__UserTopicSetting__c.object
<CustomObject>
    <description>Advisor-specific Topic settings that let advisors individually specify appointment durations that vary by Topic.</description>
    <fields>
        <fullName>sfal__DefaultAppointmentDuration__c</fullName>
        <description>The default appointment duration for the Topic and User.</description>
        <inlineHelpText>The default appointment duration for the Topic and User.</inlineHelpText>
        <label>Default Appointment Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__Topic__c</fullName>
        <description>A lookup to the associated Topic record.</description>
        <inlineHelpText>A lookup to the associated Topic record.</inlineHelpText>
        <label>Topic</label>
        <referenceTo>sfal__Topic__c</referenceTo>
        <relationshipLabel>User Topic Settings</relationshipLabel>
        <relationshipName>UserTopicSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfal__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the associated User record.</description>
        <inlineHelpText>A lookup to the associated User record.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Topic_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Topic Setting</label>
    <nameField>
        <displayFormat>UTS-{000000}</displayFormat>
        <label>Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Topic Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>